# KRPC

./: .gitignore  CMakeLists.txt  README.md
docs/: 开发过程详细记录.md  敏捷开发文档.md
example/callee/: Kserver.cc
example/caller/: Kclient.cc
src/: CMakeLists.txt  Krpcapplication.cc  Krpcchannel.cc  Krpccontroller.cc  Krpcprovider.cc  zookeeperutil.cc
src/include/: KrpcLogger.h  Krpcapplication.h  Krpcchannel.h  Krpccontroller.h
